# oram-simulator

./: .gitignore  README.md  pyproject.toml
apps/: streamlit_app.py
scripts/: demo_compare_naive_path_oram.py  demo_dummy_blocks.py  demo_graphviz_snapshots.py  demo_interactive_comparison_viewer.py  demo_interactive_rich_viewer.py  demo_mixed_workload.py  demo_naive_leakage.py  demo_path_oram_access.py  demo_path_oram_initialization.py  demo_plot_mixed_stash_sizes.py  demo_plot_stash_phases.py  demo_plot_stash_sizes.py  demo_position_map.py  demo_seed_sweep.py  demo_stash.py  demo_stash_size_tracking.py  demo_tree_server.py  demo_visual_path_oram.py
snapshots/: query-001-after-eviction.dot  query-001-after-path-read.dot  query-001-after-remap.dot  query-001-before-access.dot  query-002-after-eviction.dot  query-002-after-path-read.dot  query-002-after-remap.dot  query-002-before-access.dot  query-003-after-eviction.dot  query-003-after-path-read.dot  query-003-after-remap.dot  query-003-before-access.dot
src/oram_sim/: access_patterns.py  analysis.py  block.py  cli.py  comparison.py  experiments.py  graphviz_renderer.py  path_oram.py  plotting.py  position_map.py  (+11 more)
tests/: test_access_patterns.py  test_analysis.py  test_block.py  test_cli.py  test_comparison.py  test_experiments.py  test_graphviz_renderer.py  test_path_oram.py  test_plotting.py  test_position_map.py  test_rich_comparison_renderer.py  test_rich_renderer.py  test_snapshot.py  test_stash.py  test_storage.py  test_tree.py  test_viewer.py  test_visualization.py  test_workload.py  test_workload_profiles.py
(+3 files in other folders)
