[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oram-simulator"
version = "0.1.0"
description = "A small ORAM simulator for studying access-pattern leakage."
requires-python = ">=3.10"

[project.optional-dependencies]
viz = [
    "graphviz>=0.20",
    "matplotlib>=3.8",
    "rich>=13.0",
    "streamlit>=1.40",
]

[project.scripts]
oram-sim = "oram_sim.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
